Add admin panel with booking management and blocked dates functionality

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#behandlinger" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Behandlinger</a></li>
                 <li><a href="#om" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Om</a></li>
                 <li><a href="#kontakt" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Kontakt</a></li>
+                <li><a href="/booking" class="bg-dark-gray hover:bg-medium-gray text-white font-medium text-base px-4 py-2 rounded-md transition-colors duration-300">📅 Book en tid</a></li>
             </ul>
         </nav>
     </header>
