--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#behandlinger" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Behandlinger</a></li>
                 <li><a href="#om" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Om</a></li>
                 <li><a href="#kontakt" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Kontakt</a></li>
-                <li><a href="/booking" class="bg-dark-gray hover:bg-medium-gray text-white font-medium text-base px-4 py-2 rounded-md transition-colors duration-300">📅 Book en tid</a></li>
+                <li><a href="/booking" class="nav-booking-btn">📅 Book en tid</a></li>
             </ul>
         </nav>
     </header>
@@ -119,7 +119,7 @@
                 <div class="text-center space-y-4">
                     <p class="text-xl font-medium">Så send en SMS på 21 85 34 17 - så finder vi en tid.</p>
                     <p class="text-lg">eller</p>
-                    <a href="/booking" class="inline-block bg-sage-green hover:bg-green-600 text-white font-medium py-3 px-8 rounded-md transition-colors duration-300">
+                    <a href="/booking" class="nav-booking-btn">
                         📅 Book en tid online
                     </a>
                 </div>
