--- a/public/booking.html
+++ b/public/booking.html
@@ -145,12 +145,17 @@
                             <label for="ønsket_tid" class="block text-sm font-medium text-gray-700 mb-2">
                                 Ønsket tidspunkt (valgfrit)
                             </label>
-                            <input 
-                                type="text" 
-                                id="ønsket_tid" 
-                                name="ønsket_tid" 
-                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-sage-green focus:border-transparent"
-                                placeholder="f.eks. Formiddag, 10:00, eller efter 15:00">
+                            <select id="ønsket_tid" name="ønsket_tid" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-sage-green focus:border-transparent">
+                                <option value="">Vælg tidspunkt</option>
+                                <option value="08:00">08:00</option>
+                                <option value="09:30">09:30</option>
+                                <option value="11:00">11:00</option>
+                                <option value="12:30">12:30</option>
+                                <option value="14:00">14:00</option>
+                                <option value="15:30">15:30</option>
+                                <option value="17:00">17:00</option>
+                            </select>
+                            <div id="availability-msg" class="text-sm text-gray-600 mt-2 hidden"></div>
                             <div class="error-message text-red-600 text-sm mt-1 hidden"></div>
                         </div>
                     </div>
@@ -188,14 +193,22 @@
                     </div>
 
                     <!-- Submit Button -->
-                    <div class="mt-8 text-center">
-                        <button 
-                            type="submit" 
-                            id="submit-btn"
-                            class="bg-sage-green hover:bg-green-600 text-white font-medium py-3 px-8 rounded-md transition-colors duration-300 disabled:opacity-50 disabled:cursor-not-allowed">
-                            <span id="submit-text">Send booking-forespørgsel</span>
-                            <span id="submit-loading" class="hidden">Sender...</span>
-                        </button>
+                    <div class="mt-8 text-center space-y-3">
+                        <div class="flex justify-center gap-4">
+                            <button 
+                                type="submit" 
+                                id="submit-btn"
+                                class="bg-sage-green hover:bg-green-600 text-white font-medium py-3 px-8 rounded-md transition-colors duration-300 disabled:opacity-50 disabled:cursor-not-allowed">
+                                <span id="submit-text">Send booking-forespørgsel</span>
+                                <span id="submit-loading" class="hidden">Sender...</span>
+                            </button>
+
+                            <button type="button" id="send-confirmation-btn" class="bg-white border border-sage-green text-sage-green hover:bg-sage-green hover:text-white font-medium py-3 px-4 rounded-md transition-colors duration-300">
+                                Send bekræftelse til denne e-mail
+                            </button>
+                        </div>
+
+                        <div id="email-action-status" class="hidden text-sm"></div>
                     </div>
 
                     <p class="text-center text-sm text-gray-600 mt-4">
