rettet billede i webbowser, rettet footeren

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birgittes Briks - Klinik for kropsterapi</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="font-sans leading-relaxed text-gray-800 bg-gray-50">
