--- a/public/booking.html
+++ b/public/booking.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book en tid - Birgittes Briks</title>
+    <link rel="icon" type="image/png" href="/images/logo.png">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="font-sans leading-relaxed text-gray-800 bg-gray-50">
@@ -232,11 +233,14 @@
     <!-- Footer -->
     <footer class="bg-sage-green section-padding text-medium-gray">
         <div class="container-custom text-center">
-            <p class="mb-2">&copy; 2025 Birgittes Briks - Klinik for kropsterapi</p>
+            <p class="mb-2">&copy; <span id="currentYear"></span> Birgittes Briks - Klinik for kropsterapi</p>
             <p>Barnekærvej 6, 3660 Stenløse | +45 21 85 34 17</p>
         </div>
     </footer>
 
+    <script>
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
     <script src="/js/booking.js"></script>
 </body>
 </html>
