--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                 <li><a href="#behandlinger" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Behandlinger</a></li>
                 <li><a href="#om" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Om</a></li>
                 <li><a href="#kontakt" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Kontakt</a></li>
-                <li><a href="/booking" class="nav-booking-btn">📅 Book en tid</a></li>
+                <li><a href="/booking" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300">📅 Book en tid</a></li>
             </ul>
             
             <!-- Mobile Navigation -->
@@ -87,7 +87,7 @@
                 <li><a href="#behandlinger" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Behandlinger</a></li>
                 <li><a href="#om" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Om</a></li>
                 <li><a href="#kontakt" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Kontakt</a></li>
-                <li><a href="/booking" class="block text-center nav-booking-btn py-3">📅 Book en tid</a></li>
+                <li><a href="/booking" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300">📅 Book en tid</a></li>
             </ul>
         </nav>
     </header>
