--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
     <header class="bg-sage-green fixed top-0 w-full z-50 shadow-md">
         <nav class="container-custom">
             <!-- Desktop Navigation -->
-            <ul class="hidden md:flex justify-center gap-10 py-4">
+            <ul class="hidden lg:flex justify-center gap-10 py-4">
                 <li><a href="#behandlinger" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Behandlinger</a></li>
                 <li><a href="#om" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Om</a></li>
                 <li><a href="#kontakt" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Kontakt</a></li>
@@ -73,7 +73,7 @@
             </ul>
             
             <!-- Mobile Navigation -->
-            <div class="md:hidden flex items-center justify-between py-4">
+            <div class="lg:hidden flex items-center justify-between py-4">
                 <span class="text-gray-800 font-medium text-lg">Birgittes Briks</span>
                 <button id="mobile-menu-btn" class="text-gray-800 focus:outline-none" aria-label="Menu">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -83,7 +83,7 @@
             </div>
             
             <!-- Mobile Menu -->
-            <ul id="mobile-menu" class="hidden md:hidden flex-col gap-4 py-4 border-t border-medium-gray border-opacity-20">
+            <ul id="mobile-menu" class="hidden lg:hidden flex-col gap-4 py-4 border-t border-medium-gray border-opacity-20">
                 <li><a href="#behandlinger" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Behandlinger</a></li>
                 <li><a href="#om" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Om</a></li>
                 <li><a href="#kontakt" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Kontakt</a></li>
