--- a/public/booking.html
+++ b/public/booking.html
@@ -303,6 +303,7 @@
     <script>
         document.getElementById('currentYear').textContent = new Date().getFullYear();
     </script>
+    <script src="/js/script.js"></script>
     <script src="/js/booking.js"></script>
 </body>
 </html>
