--- a/public/admin.html
+++ b/public/admin.html
@@ -195,7 +195,7 @@
 
             <!-- Blocked Dates Tab -->
             <div id="blocked-datesTab" class="tab-content hidden">
-                <div class="grid lg:grid-cols-2 gap-8">
+                <div class="grid lg:grid-cols-2 gap-8 mb-8">
                     <!-- Add Blocked Date -->
                     <div class="admin-card" style="padding: 0; overflow: hidden;">
                         <div class="bg-gradient-to-r from-red-500 to-red-600 p-6 text-white">
@@ -243,8 +243,53 @@
                         </div>
                     </div>
 
-                    <!-- Blocked Dates List -->
+                    <!-- Block Multiple Single Dates -->
                     <div class="admin-card" style="padding: 0; overflow: hidden;">
+                        <div class="bg-gradient-to-r from-orange-500 to-orange-600 p-6 text-white">
+                            <div class="flex items-center justify-between">
+                                <div>
+                                    <h2 class="text-xl font-medium">Bloker flere enkelte dage</h2>
+                                    <p class="opacity-90 mt-1">Vælg flere specifikke datoer</p>
+                                </div>
+                                <div class="text-3xl">📅</div>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <form id="blockMultipleDatesForm" class="space-y-6">
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-2">Vælg datoer</label>
+                                    <div id="selectedDatesList" class="mb-3 flex flex-wrap gap-2 min-h-[40px] p-3 border border-gray-300 rounded-lg bg-gray-50">
+                                        <span class="text-sm text-gray-400">Ingen datoer valgt</span>
+                                    </div>
+                                    <input type="date" 
+                                           id="multipleDatePicker" 
+                                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent transition-colors">
+                                    <button type="button" 
+                                            id="addDateBtn" 
+                                            class="mt-2 w-full bg-orange-500 hover:bg-orange-600 text-white px-4 py-2 rounded-lg transition-colors text-sm font-medium">
+                                        ➕ Tilføj dato
+                                    </button>
+                                </div>
+                                <div>
+                                    <label for="multipleReason" class="block text-sm font-medium text-gray-700 mb-2">Årsag</label>
+                                    <input type="text" 
+                                           id="multipleReason" 
+                                           name="reason" 
+                                           placeholder="f.eks. Ferie, kursus, sygdom..." 
+                                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent transition-colors">
+                                </div>
+                                <button type="submit" class="w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-3 px-4 rounded-lg transition-colors shadow-md">
+                                    <span class="flex items-center justify-center gap-2">
+                                        🚫 Bloker valgte dage
+                                    </span>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Blocked Dates List -->
+                <div class="admin-card" style="padding: 0; overflow: hidden;">
                         <div class="bg-gradient-to-r from-gray-600 to-gray-700 p-6 text-white">
                             <div class="flex items-center justify-between">
                                 <div>
