--- a/public/admin.html
+++ b/public/admin.html
@@ -308,6 +308,83 @@
                             </div>
                         </div>
                     </div>
+
+                <div class="grid lg:grid-cols-2 gap-8 mt-8">
+                    <!-- Block Time Slot -->
+                    <div class="admin-card" style="padding: 0; overflow: hidden;">
+                        <div class="bg-gradient-to-r from-blue-600 to-blue-700 p-6 text-white">
+                            <div class="flex items-center justify-between">
+                                <div>
+                                    <h2 class="text-xl font-medium">Bloker tidspunkt</h2>
+                                    <p class="opacity-90 mt-1">Vælg dato og tidspunkt</p>
+                                </div>
+                                <div class="text-3xl">⏰</div>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <form id="blockTimeForm" class="space-y-6">
+                                <div>
+                                    <label for="blockTimeDate" class="block text-sm font-medium text-gray-700 mb-2">Dato</label>
+                                    <input type="date" 
+                                           id="blockTimeDate" 
+                                           name="date" 
+                                           required 
+                                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors">
+                                </div>
+                                <div>
+                                    <label for="blockTimeSlot" class="block text-sm font-medium text-gray-700 mb-2">Tidspunkt</label>
+                                    <select id="blockTimeSlot" 
+                                            name="time" 
+                                            required 
+                                            class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors">
+                                        <option value="">Vælg tidspunkt</option>
+                                        <option value="10:00">10:00</option>
+                                        <option value="11:30">11:30</option>
+                                        <option value="13:00">13:00</option>
+                                        <option value="14:30">14:30</option>
+                                        <option value="16:00">16:00</option>
+                                        <option value="17:30">17:30</option>
+                                        <option value="19:00">19:00</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label for="blockTimeReason" class="block text-sm font-medium text-gray-700 mb-2">Årsag</label>
+                                    <input type="text" 
+                                           id="blockTimeReason" 
+                                           name="reason" 
+                                           placeholder="f.eks. Pause, møde, privat..." 
+                                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors">
+                                </div>
+                                <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-medium py-3 px-4 rounded-lg transition-colors shadow-md">
+                                    <span class="flex items-center justify-center gap-2">
+                                        ⛔ Bloker tidspunkt
+                                    </span>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <!-- Blocked Times List -->
+                    <div class="admin-card" style="padding: 0; overflow: hidden;">
+                        <div class="bg-gradient-to-r from-indigo-600 to-indigo-700 p-6 text-white">
+                            <div class="flex items-center justify-between">
+                                <div>
+                                    <h2 class="text-xl font-medium">Blokerede tidspunkter</h2>
+                                    <p class="opacity-90 mt-1">Aktive blokerede tider</p>
+                                </div>
+                                <div class="text-3xl">🕒</div>
+                            </div>
+                        </div>
+                        <div class="p-6">
+                            <div id="blockedTimesList" class="space-y-3 max-h-96 overflow-y-auto">
+                                <div class="flex items-center justify-center py-8">
+                                    <div class="animate-spin rounded-full h-6 w-6 border-b-2 border-indigo-600"></div>
+                                    <span class="ml-3 text-gray-600">Indlæser...</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
 
