--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
                 <li><a href="#om" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Om</a></li>
                 <li><a href="#kontakt" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300 nav-link">Kontakt</a></li>
                 <li><a href="/booking" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300">📅 Book en tid</a></li>
+                <li><a href="/admin" class="text-medium-gray hover:text-gray-800 font-medium text-base transition-colors duration-300">Admin</a></li>
             </ul>
             
             <!-- Mobile Navigation -->
@@ -88,6 +89,7 @@
                 <li><a href="#om" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Om</a></li>
                 <li><a href="#kontakt" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300 nav-link mobile-link">Kontakt</a></li>
                 <li><a href="/booking" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300">📅 Book en tid</a></li>
+                <li><a href="/admin" class="block text-medium-gray hover:text-gray-800 font-medium text-base py-2 transition-colors duration-300">Admin</a></li>
             </ul>
         </nav>
     </header>
