--- a/public/admin.html
+++ b/public/admin.html
@@ -402,6 +402,20 @@
                     </div>
                     <div class="p-6">
                         <form id="manualBookingForm" class="space-y-6">
+                            <!-- User Search -->
+                            <div>
+                                <label for="userSearch" class="block text-sm font-medium text-gray-700 mb-2">Søg eksisterende bruger</label>
+                                <div class="relative">
+                                    <input type="text" 
+                                           id="userSearch" 
+                                           placeholder="Søg efter navn eller telefon..." 
+                                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-colors"
+                                           autocomplete="off">
+                                    <ul id="userSearchResults" class="absolute top-full left-0 right-0 mt-2 bg-white border border-gray-300 rounded-lg shadow-lg hidden max-h-48 overflow-y-auto z-10">
+                                    </ul>
+                                </div>
+                            </div>
+
                             <div class="grid md:grid-cols-2 gap-6">
                                 <div>
                                     <label for="manualNavn" class="block text-sm font-medium text-gray-700 mb-2">Fulde navn *</label>
@@ -470,15 +484,6 @@
                                     <option value="Klippekort 3 behandlinger (1800 kr.)">Klippekort 3 behandlinger (1800 kr.)</option>
                                     <option value="Klippekort 10 behandlinger (5500 kr.)">Klippekort 10 behandlinger (5500 kr.)</option>
                                 </select>
-                            </div>
-
-                            <div>
-                                <label for="manualBesked" class="block text-sm font-medium text-gray-700 mb-2">Besked/noter</label>
-                                <textarea id="manualBesked" 
-                                          name="besked" 
-                                          rows="4" 
-                                          class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-colors resize-none"
-                                          placeholder="Ekstra noter eller beskeder..."></textarea>
                             </div>
 
                             <button type="submit" class="w-full bg-green-600 hover:bg-green-700 text-white font-medium py-3 px-4 rounded-lg transition-colors shadow-md">
