--- a/public/admin.html
+++ b/public/admin.html
@@ -479,15 +479,15 @@
                             </div>
 
                             <div>
-                                <label for="manualBehandling" class="block text-sm font-medium text-gray-700 mb-2">Behandlingstype *</label>
+                                <label for="manualBehandling" class="block text-sm font-medium text-gray-700 mb-2">Behandlingstype / Betaling *</label>
                                 <select id="manualBehandling" 
-                                        name="behandling_type" 
+                                        name="betaling" 
                                         required 
                                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-colors">
                                     <option value="">Vælg behandling</option>
                                     <option value="Enkelt behandling (650 kr.)">Enkelt behandling (650 kr.)</option>
-                                    <option value="Klippekort 3 behandlinger (1800 kr.)">Klippekort 3 behandlinger (1800 kr.)</option>
-                                    <option value="Klippekort 10 behandlinger (5500 kr.)">Klippekort 10 behandlinger (5500 kr.)</option>
+                                    <option value="3 behandlinger - klippekort (1800 kr.)">3 behandlinger - klippekort (1800 kr.)</option>
+                                    <option value="10 behandlinger - klippekort (5500 kr.)">10 behandlinger - klippekort (5500 kr.)</option>
                                 </select>
                             </div>
 
