--- a/public/booking.html
+++ b/public/booking.html
@@ -176,16 +176,18 @@
 
                         <!-- Behandlingstype -->
                         <div>
-                            <label for="behandling_type" class="block text-sm font-medium text-gray-700 mb-2">
-                                Behandlingstype
+                            <label for="betaling" class="block text-sm font-medium text-gray-700 mb-2">
+                                Behandlingstype / Betaling *
                             </label>
                             <select 
-                                id="behandling_type" 
-                                name="behandling_type" 
+                                id="betaling" 
+                                name="betaling" 
+                                required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-sage-green focus:border-transparent">
-                                <option value="Enkelt behandling">Enkelt behandling (650 kr.)</option>
-                                <option value="3 behandlinger (klippekort)">3 behandlinger - klippekort (1800 kr.)</option>
-                                <option value="10 behandlinger (klippekort)">10 behandlinger - klippekort (5500 kr.)</option>
+                                <option value="">Vælg behandling</option>
+                                <option value="Enkelt behandling (650 kr.)">Enkelt behandling (650 kr.)</option>
+                                <option value="3 behandlinger - klippekort (1800 kr.)">3 behandlinger - klippekort (1800 kr.)</option>
+                                <option value="10 behandlinger - klippekort (5500 kr.)">10 behandlinger - klippekort (5500 kr.)</option>
                             </select>
                         </div>
 
