--- a/public/admin.html
+++ b/public/admin.html
@@ -479,12 +479,23 @@
                             </div>
 
                             <div>
-                                <label for="manualBehandling" class="block text-sm font-medium text-gray-700 mb-2">Behandlingstype / Betaling *</label>
+                                <label for="manualBehandling" class="block text-sm font-medium text-gray-700 mb-2">Behandling *</label>
                                 <select id="manualBehandling" 
-                                        name="betaling" 
+                                        name="behandling" 
                                         required 
                                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-colors">
                                     <option value="">Vælg behandling</option>
+                                    <option value="Kropsterapi">Kropsterapi</option>
+                                </select>
+                            </div>
+
+                            <div>
+                                <label for="manualBetaling" class="block text-sm font-medium text-gray-700 mb-2">Betaling / Klippekort *</label>
+                                <select id="manualBetaling" 
+                                        name="betaling" 
+                                        required 
+                                        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-colors">
+                                    <option value="">Vælg betaling</option>
                                     <option value="Enkelt behandling (650 kr.)">Enkelt behandling (650 kr.)</option>
                                     <option value="3 behandlinger - klippekort (1800 kr.)">3 behandlinger - klippekort (1800 kr.)</option>
                                     <option value="10 behandlinger - klippekort (5500 kr.)">10 behandlinger - klippekort (5500 kr.)</option>
