--- a/public/booking.html
+++ b/public/booking.html
@@ -174,17 +174,32 @@
                             <div class="error-message text-red-600 text-sm mt-1 hidden"></div>
                         </div>
 
-                        <!-- Behandlingstype -->
+                        <!-- Behandling -->
+                        <div>
+                            <label for="behandling" class="block text-sm font-medium text-gray-700 mb-2">
+                                Behandling *
+                            </label>
+                            <select 
+                                id="behandling" 
+                                name="behandling" 
+                                required
+                                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-sage-green focus:border-transparent">
+                                <option value="">Vælg behandling</option>
+                                <option value="Kropsterapi">Kropsterapi</option>
+                            </select>
+                        </div>
+
+                        <!-- Betaling -->
                         <div>
                             <label for="betaling" class="block text-sm font-medium text-gray-700 mb-2">
-                                Behandlingstype / Betaling *
+                                Betaling *
                             </label>
                             <select 
                                 id="betaling" 
                                 name="betaling" 
                                 required
                                 class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-sage-green focus:border-transparent">
-                                <option value="">Vælg behandling</option>
+                                <option value="">Vælg betaling</option>
                                 <option value="Enkelt behandling (650 kr.)">Enkelt behandling (650 kr.)</option>
                                 <option value="3 behandlinger - klippekort (1800 kr.)">3 behandlinger - klippekort (1800 kr.)</option>
                                 <option value="10 behandlinger - klippekort (5500 kr.)">10 behandlinger - klippekort (5500 kr.)</option>
