--- a/public/admin.html
+++ b/public/admin.html
@@ -548,6 +548,13 @@
         </div>
     </main>
 
-    <script src="/js/admin.js"></script>
+    <!-- Admin Scripts -->
+    <script src="/js/admin-ui.js"></script>
+    <script src="/js/admin-auth.js"></script>
+    <script src="/js/admin-bookings.js"></script>
+    <script src="/js/admin-blocked-dates.js"></script>
+    <script src="/js/admin-blocked-times.js"></script>
+    <script src="/js/admin-users.js"></script>
+    <script src="/js/admin-main.js"></script>
 </body>
 </html>
