--- a/public/admin.html
+++ b/public/admin.html
@@ -139,14 +139,24 @@
                                     </div>
                                 </div>
 
-                                <!-- Bookings for selected day -->
-                                <div id="bookingsOfDay" class="col-span-2 space-y-3">
-                                    <div class="text-center py-12">
-                                        <div class="text-4xl mb-3">📅</div>
-                                        <p class="text-gray-500">Vælg en dag til venstre for at se bookinger</p>
+                                <!-- Bookings for selected day + Availability -->
+                                <div class="col-span-2 space-y-6">
+                                    <!-- Availability Info -->
+                                    <div id="availabilityInfo" class="admin-card p-4 bg-blue-50 border border-blue-200">
+                                        <div class="text-center py-4">
+                                            <div class="text-3xl mb-2">📅</div>
+                                            <p class="text-gray-500 text-sm">Vælg en dag til venstre for at se tilgængelighed</p>
+                                        </div>
+                                    </div>
+
+                                    <!-- Bookings for selected day -->
+                                    <div id="bookingsOfDay" class="space-y-3">
+                                        <div class="text-center py-12">
+                                            <div class="text-4xl mb-3">📅</div>
+                                            <p class="text-gray-500">Vælg en dag til venstre for at se bookinger</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
