--- a/public/admin.html
+++ b/public/admin.html
@@ -139,22 +139,11 @@
                                     </div>
                                 </div>
 
-                                <!-- Bookings for selected day + Availability -->
-                                <div class="col-span-2 space-y-6">
-                                    <!-- Availability Info -->
-                                    <div id="availabilityInfo" class="admin-card p-4 bg-blue-50 border border-blue-200">
-                                        <div class="text-center py-4">
-                                            <div class="text-3xl mb-2">📅</div>
-                                            <p class="text-gray-500 text-sm">Vælg en dag til venstre for at se tilgængelighed</p>
-                                        </div>
-                                    </div>
-
-                                    <!-- Bookings for selected day -->
-                                    <div id="bookingsOfDay" class="space-y-3">
-                                        <div class="text-center py-12">
-                                            <div class="text-4xl mb-3">📅</div>
-                                            <p class="text-gray-500">Vælg en dag til venstre for at se bookinger</p>
-                                        </div>
+                                <!-- Bookings for selected day -->
+                                <div id="bookingsOfDay" class="col-span-2 space-y-3">
+                                    <div class="text-center py-12">
+                                        <div class="text-4xl mb-3">📅</div>
+                                        <p class="text-gray-500">Vælg en dag til venstre for at se bookinger</p>
                                     </div>
                                 </div>
                         </div>
@@ -485,6 +474,14 @@
                                         <option value="17:30">17:30</option>
                                         <option value="19:00">19:00</option>
                                     </select>
+                                </div>
+                            </div>
+
+                            <!-- Availability Info -->
+                            <div id="manualAvailabilityInfo" class="p-4 rounded-lg bg-blue-50 border border-blue-200 hidden">
+                                <div class="prose prose-sm max-w-none">
+                                    <p class="text-sm text-gray-600 mb-3"><strong>Tilgængelighed for valgt dato:</strong></p>
+                                    <div id="manualAvailabilityContent" class="space-y-2"></div>
                                 </div>
                             </div>
 
